# sips

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  codecov.yml  credits.txt  justfile
.github/workflows/: coverage.yml
include/: cursor_helpers.h  ti_font.h  ti_helpers.h  ti_person.h
src/: main.cpp  test_helpers.cpp  ti_helpers.cpp  ti_person.cpp
tests/: CMakeLists.txt  Makefile  conanfile.txt  test_helpers.cpp
tests/host_stubs/: bn_fixed.h  butano_stubs.h
